# OpenAI_Agent_Swarm

./: .cursorignore  .gitignore  pyproject.toml
agents/agent_builder/: create.py
agents/agent_builder/agents/JobProposalGent/: instructions.md  settings.json
agents/tool_maker/: tool_updater.py
shared/: openai_config.py
